src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-dwU-b-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\ndefault column width: U\nborder on\nwant fullscreen: BN\ntabbed"
expression: snapshot
---
initial configure:
size: 1231 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 1231 × 680, bounds: 1231 × 680, states: [Activated]
