src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-dwU-dhF500-b.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\ndefault column width: U\ndefault window height: F500\nborder on"
expression: snapshot
---
initial configure:
size: 1240 × 500, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 500, bounds: 1240 × 680, states: [Activated]
